--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
         <p id="description">
           Hacemos crecer tu negocio digital y lo adaptamos a los nuevos
           paradigmas para que siempre esté actualizado.
+          <hr class="line" />
         </p>
       </div>
       <div class="beneficios__items">
@@ -48,6 +49,7 @@
         <p>
           Estamos en conestante aprendizaje, y pensando nuevas ideas de
           marketing, publicidad y comunicación para aplicar a tu negocio.
+          <hr class="line" />
         </p>
       </div>
       <div class="beneficios__items">
@@ -57,8 +59,10 @@
           preparamos informes estadisticos para que juntos analicemos y sigamos
           creciendo.
         </p>
+        <hr class="line" />
       </div>
     </section>
+
     <section id="quehacemos" class="video">
       <h3>¿Que hacemos?</h3>
       <iframe
@@ -72,7 +76,9 @@
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
         allowfullscreen
       ></iframe>
+      <hr class="line" />
     </section>
+
     <section class="plans" id="plans">
       <div class="plans__text">
         <h5>Plan básico</h5>
