--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
     </section>
 
     <section class="plans" id="plans">
+
       <div class="plans__text">
         <h5>Plan básico</h5>
         <ul>
@@ -87,8 +88,10 @@
           <li>- 2 publicaciones y 10 historias por semana.</li>
           <li>- Informes mensuales.</li>
         </ul>
+        <div>
         <h3>$9000</h3>
         <p>por mes</p>
+        </div>
       </div>
       <div class="plans__text">
         <h5>Plan medio</h5>
@@ -98,22 +101,27 @@
           <li>- Informes por quincena.</li>
           <li>- Manejo de campañas publicitarias.</li>
         </ul>
+        <div>
         <h3>$15.000</h3>
         <p>por mes</p>
+        </div>
       </div>
+
       <div class="plans__text">
         <h5>Plan full</h5>
         <ul>
           <li>- Manejo de redes sociales.</li>
           <li>- 5 publicaciones y 30 historias por semana.</li>
           <li>- Informes semanales.</li>
-          <li>- Manejo de campañas publicitarias.</li>
           <li>- Desarrollo y mantenimiento de pagina web.</li>
         </ul>
+        <div>
         <h3>$22.000</h3>
         <p>por mes</p>
+        </div>
       </div>
     </section>
+      <hr class="line" />
     <section class="formulario" id="section-form">
       <h1 class="formulario__titulo" id="title">
         Servicios de marketing digital sin limites
